[collect] Added returning user

--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -53,6 +53,20 @@
             </div>
             <div class="tab-content-spacer" fxFlex></div>
             <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
+                <h5 class="tab-sub-title" fxFlex.xs="100">Are you a returning user?<span>*</span></h5>
+                <div fxFlex="5" fxHide.xs></div>
+                <mat-radio-group class="radio-group lang"
+                                 fxLayout="row wrap"
+                                 fxLayoutAlign="start center"
+                                 fxLayoutGap="10px" fxFlex
+                                 fxFlex.xs="100"
+                                 [formControl]="formControls.englishProficient">
+                    <mat-radio-button class="tab-check-box" value="y" fxFlex="13" fxFlex.xs="25">Yes</mat-radio-button>
+                    <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25">No</mat-radio-button>
+                </mat-radio-group>
+            </div>
+            <div class="tab-content-spacer" fxFlex></div>
+            <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
                 <div fxFlex="5" fxHide.xs></div>
                 <h5 class="tab-sub-title" fxFlex="100">Location</h5>
                 <mat-form-field fxFlex="30" fxFlex.xs>
