[collect] Added IISc ethics committee in disclaimer

--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -10,6 +10,7 @@
                Please keep your device around 20 cm from your face during the recording and perform the recording in a quiet environment.
                The recording device should not be shared with others before cleaning/sanitation.
             </p>
+            <p>The Indian Institute of Science Ethics Committee has approved the procedure for non-invasive recordings.</p>
             <span *ngIf="disableMetaData && !finishedMetaData">By clicking start you will proceed to data and stimuli collection, accepting our
             </span><span *ngIf="!disableMetaData || finishedMetaData">You have accepted our </span>
             <a href="https://coswara.iisc.ac.in/terms" target="_blank">terms and conditions</a>.
