--- a/src/app/team/team.component.less
+++ b/src/app/team/team.component.less
@@ -38,7 +38,7 @@
 @media(max-width: 768px) {
   .mentors {
     margin-bottom: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 0;
   }
   .mentors .people {
     padding: 0;
