--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -1,3 +1,4 @@
-.home-footer {
-  margin: 10px 0 30px -5px;
+.home-footer { margin: 45px 0 10px -7px; }
+@media(max-width: 768px) {
+  .home-footer { margin-top: 25px; }
 }
