Added many components

--- a/projects/collect/src/app/collect-app.component.html
+++ b/projects/collect/src/app/collect-app.component.html
@@ -1,8 +1,10 @@
 <div *ngIf="!appLoader" fxLayout="column" fxFill>
     <cs-navbar></cs-navbar>
-    <cs-content fxLayout="column" fxFlex>
+    <cs-content>
         <router-outlet></router-outlet>
     </cs-content>
+    <div fxFlex></div>
+    <cs-footer></cs-footer>
 </div>
 <div *ngIf="appLoader" class="content-container" fxLayout="column" fxLayoutAlign="center center" fxFill>
     <mat-progress-spinner [diameter]="80" mode="indeterminate"></mat-progress-spinner>
