--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,6 +1,7 @@
 <div class="component-container">
     <h3 class="page-title">in the news</h3>
     <div class="content">
+        We appreciate the media’s help in promoting our research and positively contributing to the data collection.
         <div class="news-section" *ngFor="let nC of newsContent">
             <h5>{{nC.lang}}</h5>
             <ul>
