--- a/src/styles.less
+++ b/src/styles.less
@@ -156,6 +156,7 @@ p {
   padding: 6px 19px;
   text-align: center;
   user-select: none;
+  text-transform: uppercase;
 }
 .button.button-dark {
   background-color: @color_dark;
