--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -1,51 +1,44 @@
 <div class="component-container">
-    <h4 *ngIf="!finishedMetaData" class="page-title">We need some information to continue!</h4>
+    <h4 *ngIf="!finishedMetaData" class="page-title">{{'metadata.title.no_metadata' | translate}}</h4>
     <mat-tab-group [dynamicHeight]="true" [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndex = $event">
-        <mat-tab [disabled]="submitLoader" label="Disclaimer">
-            <p>This study builds on other previous studies which have reported a high level of sensitivity for identifying respiratory illness from the human voice.
-            Any tools with statistical significance in disease detection will also be implemented as part of this app at a later date.
-            The participation in this study is purely voluntary and the details collected will not contain any personally identifiable information.
-            </p>
-            <p>The entire recording and data collection should take about 5 minutes only.
-               Please keep your device around 20 cm from your face during the recording and perform the recording in a quiet environment.
-               The recording device should not be shared with others before cleaning/sanitation.
-            </p>
-            <p>The Indian Institute of Science Ethics Committee has approved the procedure for non-invasive recordings.</p>
-            <span *ngIf="disableMetaData && !finishedMetaData">By clicking start you will proceed to data and stimuli collection, accepting our
-            </span><span *ngIf="!disableMetaData || finishedMetaData">You have accepted our </span>
-            <a href="https://coswara.iisc.ac.in/terms" target="_blank">terms and conditions</a>.
-            <p>For any questions, please contact <a href="mailto:sriramg@iisc.ac.in">sriramg@iisc.ac.in</a></p>
+        <mat-tab [disabled]="submitLoader" label="{{'metadata.tabs.disclaimer' | translate}}">
+            <p [innerHTML]="'metadata.disclaimer.para1' | translate"></p>
+            <p [innerHTML]="'metadata.disclaimer.para2' | translate"></p>
+            <p [innerHTML]="'metadata.disclaimer.para3' | translate"></p>
+            <p *ngIf="finishedMetaData" [innerHTML]="'metadata.disclaimer.para4' | translate"></p>
+            <p *ngIf="!finishedMetaData" [innerHTML]="'metadata.disclaimer.para4.alternate' | translate"></p>
+            <p [innerHTML]="'metadata.disclaimer.para5' | translate"></p>
             <div class="tab-footer" fxLayout="row" fxLayoutAlign="end center">
-                <div *ngIf="!submitLoader && disableMetaData && !finishedMetaData" class="button button-dark" (click)="disableMetaData = false; selectedIndex = selectedIndex + 1">START</div>
-                <div *ngIf="!submitLoader && !disableMetaData && !finishedMetaData" class="button button-dark" (click)="disableMetaData = false; selectedIndex = selectedIndex + 1">NEXT</div>
-                <div *ngIf="!submitLoader && finishedMetaData" class="button button-dark" (click)="goToRecordPage()">CONTINUE</div>
+                <div *ngIf="!submitLoader && disableMetaData && !finishedMetaData" class="button button-dark" (click)="disableMetaData = false; selectedIndex = selectedIndex + 1">{{'metadata.buttons.start' | translate}}</div>
+                <div *ngIf="!submitLoader && !disableMetaData && !finishedMetaData" class="button button-dark" (click)="disableMetaData = false; selectedIndex = selectedIndex + 1">{{'metadata.buttons.next' | translate}}</div>
+                <div *ngIf="!submitLoader && finishedMetaData" class="button button-dark" (click)="goToRecordPage()">{{'metadata.buttons.continue' | translate}}</div>
                 <div *ngIf="!submitLoader && finishedMetaData" style="margin: 5px"></div>
-                <div *ngIf="!submitLoader && finishedMetaData" class="button" (click)="startOver()">START OVER</div>
+                <div *ngIf="!submitLoader && finishedMetaData" class="button" (click)="startOver()">{{'metadata.buttons.start_over' | translate}}</div>
                 <div *ngIf="submitLoader" fxFlex="row" fxLayoutAlign="center center" fxFlexFill>
                     <mat-progress-spinner [diameter]="50" mode="indeterminate"></mat-progress-spinner>
                 </div>
             </div>
         </mat-tab>
-        <mat-tab *ngIf="!finishedMetaData" [disabled]="submitLoader || disableMetaData" label="Metadata" fxLayout="row wrap">
+        <mat-tab *ngIf="!finishedMetaData" [disabled]="submitLoader || disableMetaData" label="{{'metadata.tabs.metadata' | translate}}" fxLayout="row wrap">
             <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
                 <mat-form-field fxFlex="10" fxFlex.xs="27">
-                    <mat-label>Age</mat-label>
+                    <mat-label>{{'forms.label.age' | translate}}</mat-label>
                     <input type="number" [formControl]="formControls.age" matInput required>
-                    <mat-error *ngIf="formControls.age.hasError('required')">Required</mat-error>
-                    <mat-error *ngIf="formControls.age.hasError('min') || formControls.age.hasError('max')">Doesn't look like valid age</mat-error>
+                    <mat-error *ngIf="formControls.age.hasError('required')">{{'forms.errors.required' | translate}}</mat-error>
+                    <mat-error *ngIf="formControls.age.hasError('min') || formControls.age.hasError('max')">{{'forms.errors.age.valid' | translate}}</mat-error>
                 </mat-form-field>
                 <div fxFlex="3" fxFlex.xs="5"></div>
                 <mat-form-field fxFlex="17" fxFlex.xs="67">
-                    <mat-label>Gender</mat-label>
+                    <mat-label>{{'forms.label.gender' | translate}}</mat-label>
                     <mat-select [formControl]="formControls.gender" required>
                         <mat-option *ngFor="let g of optionList.genderList" [value]="g.toLowerCase()">{{g}}</mat-option>
                     </mat-select>
-                    <mat-error *ngIf="formControls.gender.hasError('required')">Required</mat-error>
+                    <mat-error *ngIf="formControls.gender.hasError('required')">{{'forms.errors.required' | translate}}</mat-error>
                 </mat-form-field>
             </div>
             <div class="tab-content-spacer" fxFlex></div>
             <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
-                <h5 class="tab-sub-title" fxFlex.xs="100">Are you proficient in English?<span>*</span></h5>
+                <h5 class="tab-sub-title" fxFlex.xs="100">{{'forms.label.english_proficient' | translate}} <span>*</span></h5>
                 <div fxFlex="5" fxHide.xs></div>
                 <mat-radio-group class="radio-group lang"
                                  fxLayout="row wrap"
@@ -59,7 +52,7 @@
             </div>
             <div class="tab-content-spacer" fxFlex></div>
             <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
-                <h5 class="tab-sub-title" fxFlex.xs="100">Are you a returning user?</h5>
+                <h5 class="tab-sub-title" fxFlex.xs="100">{{'forms.label.returning_user' | translate}}</h5>
                 <div fxFlex="5" fxHide.xs></div>
                 <mat-radio-group class="radio-group lang"
                                  fxLayout="row wrap"
@@ -74,72 +67,72 @@
             <div class="tab-content-spacer" fxFlex></div>
             <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
                 <div fxFlex="5" fxHide.xs></div>
-                <h5 class="tab-sub-title" fxFlex="100">Location</h5>
+                <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.location' | translate}}</h5>
                 <mat-form-field fxFlex="30" fxFlex.xs>
-                    <mat-label>Country</mat-label>
+                    <mat-label>{{'forms.label.country' | translate}}</mat-label>
                     <mat-select [formControl]="formControls.country" (selectionChange)="getStates()" required>
                         <mat-option *ngFor="let country of optionList.countryList" [value]="country">{{country}}</mat-option>
                     </mat-select>
-                    <mat-error *ngIf="formControls.country.hasError('required')">Required</mat-error>
+                    <mat-error *ngIf="formControls.country.hasError('required')">{{'forms.errors.required' | translate}}</mat-error>
                 </mat-form-field>
                 <div fxFlex="5" fxHide.xs></div>
                 <mat-form-field fxFlex="29" fxFlex.xs>
-                    <mat-label>State/Province</mat-label>
+                    <mat-label>{{'forms.label.state' | translate}}</mat-label>
                     <mat-select [formControl]="formControls.state" required>
                         <mat-option *ngFor="let state of optionList.selectedStateList" [value]="state">{{state}}</mat-option>
                     </mat-select>
-                    <mat-error *ngIf="formControls.state.hasError('required')">Required</mat-error>
+                    <mat-error *ngIf="formControls.state.hasError('required')">{{'forms.errors.required' | translate}}</mat-error>
                 </mat-form-field>
                 <div fxFlex="5" fxHide.xs></div>
                 <mat-form-field fxFlex="30" fxFlex.xs>
-                    <mat-label>Locality/District</mat-label>
+                    <mat-label>{{'forms.label.locality' | translate}}</mat-label>
                     <input type="text" [formControl]="formControls.locality" matInput>
                 </mat-form-field>
                 <div fxLayout="row" fxLayoutAlign="end center" fxFlexFill>
-                    <span class="smaller-text">All fields marked (*) are mandatory</span>
+                    <span class="smaller-text">{{'forms.errors.field_required' | translate}}</span>
                 </div>
             </div>
             <div class="tab-footer" fxLayout="row" fxLayoutAlign="end center">
-                <div class="button" (click)="selectedIndex = selectedIndex - 1">PREVIOUS</div>
+                <div class="button" (click)="selectedIndex = selectedIndex - 1">{{'metadata.buttons.previous' | translate}}</div>
                 <div fxFlex></div>
-                <div *ngIf="formGroups.metadata.valid" class="button button-dark" (click)="formGroups.metadata.valid && (selectedIndex = selectedIndex + 1)">NEXT</div>
+                <div *ngIf="formGroups.metadata.valid" class="button button-dark" (click)="formGroups.metadata.valid && (selectedIndex = selectedIndex + 1)">{{'metadata.buttons.next' | translate}}</div>
             </div>
         </mat-tab>
-        <mat-tab *ngIf="!finishedMetaData"  [disabled]="!formGroups.metadata.valid" label="Health Status">
+        <mat-tab *ngIf="!finishedMetaData"  [disabled]="!formGroups.metadata.valid" label="{{'metadata.tabs.health_status' | translate}}">
             <div class="form" fxLayout="row wrap" fxLayoutAlign="start center">
-                <h5 class="tab-sub-title" fxFlex="100">Current Status<span>*</span></h5>
+                <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.current_status' | translate}} <span>*</span></h5>
                 <div class="current-status" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
                     <mat-radio-group class="radio-group" fxLayout="column" fxLayoutAlign="start start" [formControl]="formControls.currentStatus" required>
                         <mat-radio-button class="tab-check-box"
-                                          [value]="hs.id"
+                                          [value]="hs"
                                           *ngFor="let hs of optionList.currentStatusList"
                                           fxFlex="100">
-                            {{hs.value}}
+                            {{'forms.option.' + hs | translate}}
                         </mat-radio-button>
                     </mat-radio-group>
                 </div>
                 <div class="tab-content-spacer" fxFlex="100"></div>
-                <h5 class="tab-sub-title" fxFlex="100">Health Conditions<span>*</span></h5>
+                <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.health_conditions' | translate}} <span>*</span></h5>
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="100">
                     <div class="tab-check-box" *ngFor="let cb of optionList.healthConditionList" fxFlex="32" fxFlex.xs="100">
-                        <mat-checkbox [formControl]="formControls[cb.id]" (change)="setValidity()">{{cb.name}}</mat-checkbox>
+                        <mat-checkbox [formControl]="formControls[cb]" (change)="setValidity()">{{'forms.option.' + cb | translate}}</mat-checkbox>
                     </div>
                     <div class="tab-check-box" fxFlex="32" fxFlex.xs="100">
-                        <mat-checkbox [formControl]="formControls.none" (change)="resetStatus()">None of the above</mat-checkbox>
+                        <mat-checkbox [formControl]="formControls.none" (change)="resetStatus()">{{'forms.option.none_of_the_above' | translate}}</mat-checkbox>
                     </div>
                 </div>
                 <div fxLayout="row" fxLayoutAlign="end center" fxFlexFill>
-                    <span class="smaller-text">All fields marked (*) are mandatory</span>
+                    <span class="smaller-text">{{'forms.errors.field_required' | translate}}</span>
                 </div>
             </div>
             <div class="tab-footer" fxLayout="column" fxLayoutAlign="start center">
                 <div *ngIf="!submitLoader" fxFlex="row" fxLayoutAlign="end center" fxFlexFill>
-                    <div class="button" (click)="selectedIndex = selectedIndex - 1">PREVIOUS</div>
+                    <div class="button" (click)="selectedIndex = selectedIndex - 1">{{'metadata.buttons.previous' | translate}}</div>
                     <div fxFlex></div>
                     <div *ngIf="formGroups.metadata.valid && formGroups.healthStatus.valid"
                          class="button button-dark"
                          (click)="submitData()">
-                        SUBMIT
+                        {{'metadata.buttons.submit' | translate}}
                     </div>
                 </div>
                 <div *ngIf="submitLoader" fxFlex="row" fxLayoutAlign="center center" fxFlexFill>
