--- a/projects/collect/src/app/record/record.component.html
+++ b/projects/collect/src/app/record/record.component.html
@@ -5,34 +5,34 @@
     <div [ngStyle]="stepLoader ? { 'display': 'none' } : {}">
         <div class="info-box" fxLayout="row" fxLayoutAlign="start center">
             <mat-icon class="material-icons">info</mat-icon>
-            Please make sure you are in a quiet environment and keep your device around 20 cm from your face
+            {{'record.message.info' | translate}}
         </div>
         <mat-vertical-stepper [selectedIndex]="selectedStageIndex" [linear]="true" #stepper>
             <mat-step *ngFor="let stageId of recordStages" [stepControl]="formControls[stageId]">
-                <ng-template matStepLabel>{{titleDict[stageId]}}</ng-template>
-                <div *ngIf="instructionDict[stageId] && recordState >= 0 && recordState < 5" class="inst">{{instructionDict[stageId]}}</div>
+                <ng-template matStepLabel>{{'record.title.' + stageId | translate}}</ng-template>
+                <div *ngIf="instructionDict[stageId] && recordState >= 0 && recordState < 5" class="inst">{{'record.description.' + stageId | translate}}</div>
                 <div *ngIf="recordState == -1" class="upload" fxLayout="row wrap" fxLayoutAlign="start center">
                     <mat-progress-spinner [diameter]="30" mode="indeterminate"></mat-progress-spinner>
                     <div class="content">
-                        Initialising! Please wait...
+                        {{'record.message.initializing' | translate}}
                     </div>
                 </div>
                 <div *ngIf="recordState == 5" class="upload" fxLayout="row wrap" fxLayoutAlign="start center">
                     <mat-progress-spinner [diameter]="30" [value]="uploadProgress"></mat-progress-spinner>
                     <div class="content">
-                        Uploading! Please wait...
+                        {{'record.message.uploading' | translate}}
                     </div>
                 </div>
                 <div *ngIf="stageId != 'done' && recordState != -1" class="step-buttons" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="start center" fxLayoutAlign.xs="center start">
-                    <div *ngIf="recordState < 2" class="button" (click)="recordState = 2; stopSamplePlaying(); startRecording();">START RECORDING</div>
-                    <div *ngIf="recordState == 2" class="button button-dark" (click)="recordState = 3; stopRecording();">STOP RECORDING</div>
-                    <div *ngIf="recordState > 0 && recordState < 2" class="button" (click)="recordState = 0; startSamplePlaying();">PLAY SAMPLE</div>
-                    <div *ngIf="recordState == 0" class="button button-dark" (click)="stopSamplePlaying(); recordState = 1;">STOP PLAYING</div>
-                    <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="recordState = 4; startPlaying();">PLAY</div>
-                    <div *ngIf="recordState == 4" class="button button-dark" (click)="stopPlaying(); recordState = 3;">STOP</div>
-                    <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="recordState = 5; uploadAudio(stageId);">UPLOAD</div>
-                    <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="initRecord();">RECORD AGAIN</div>
-                    <div *ngIf="recordState == 5" class="button" (click)="cancelUpload(); recordState=3;">CANCEL</div>
+                    <div *ngIf="recordState < 2" class="button" (click)="recordState = 2; stopSamplePlaying(); startRecording();">{{'record.button.start_recording' | translate}}</div>
+                    <div *ngIf="recordState == 2" class="button button-dark" (click)="recordState = 3; stopRecording();">{{'record.button.stop_recording' | translate}}</div>
+                    <div *ngIf="recordState > 0 && recordState < 2" class="button" (click)="recordState = 0; startSamplePlaying();">{{'record.button.play_sample' | translate}}</div>
+                    <div *ngIf="recordState == 0" class="button button-dark" (click)="stopSamplePlaying(); recordState = 1;">{{'record.button.stop_playing' | translate}}</div>
+                    <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="recordState = 4; startPlaying();">{{'record.button.play' | translate}}</div>
+                    <div *ngIf="recordState == 4" class="button button-dark" (click)="stopPlaying(); recordState = 3;">{{'record.button.stop' | translate}}</div>
+                    <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="recordState = 5; uploadAudio(stageId);">{{'record.button.upload' | translate}}</div>
+                    <div *ngIf="recordState > 2 && recordState < 4" class="button" (click)="initRecord();">{{'record.button.record_again' | translate}}</div>
+                    <div *ngIf="recordState == 5" class="button" (click)="cancelUpload(); recordState=3;">{{'record.button.cancel' | translate}}</div>
                 </div>
             </mat-step>
         </mat-vertical-stepper>
