--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -38,6 +38,20 @@
             </div>
             <div class="tab-content-spacer" fxFlex></div>
             <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
+                <h5 class="tab-sub-title" fxFlex.xs="100">{{'forms.label.using_mask' | translate}} <span>*</span></h5>
+                <div fxFlex="5" fxHide.xs></div>
+                <mat-radio-group class="radio-group lang"
+                                 fxLayout="row wrap"
+                                 fxLayoutAlign="start center"
+                                 fxLayoutGap="10px" fxFlex
+                                 fxFlex.xs="100"
+                                 [formControl]="formControls.usingMask">
+                    <mat-radio-button class="tab-check-box" value="y" fxFlex="13" fxFlex.xs="25">{{'forms.options.yes' | translate}}</mat-radio-button>
+                    <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25">{{'forms.options.no' | translate}}</mat-radio-button>
+                </mat-radio-group>
+            </div>
+            <div class="tab-content-spacer" fxFlex></div>
+            <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
                 <h5 class="tab-sub-title" fxFlex.xs="100">{{'forms.label.english_proficient' | translate}} <span>*</span></h5>
                 <div fxFlex="5" fxHide.xs></div>
                 <mat-radio-group class="radio-group lang"
@@ -46,8 +60,8 @@
                                  fxLayoutGap="10px" fxFlex
                                  fxFlex.xs="100"
                                  [formControl]="formControls.englishProficient">
-                    <mat-radio-button class="tab-check-box" value="y" fxFlex="13" fxFlex.xs="25">Yes</mat-radio-button>
-                    <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25">No</mat-radio-button>
+                    <mat-radio-button class="tab-check-box" value="y" fxFlex="13" fxFlex.xs="25">{{'forms.options.yes' | translate}}</mat-radio-button>
+                    <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25">{{'forms.options.no' | translate}}</mat-radio-button>
                 </mat-radio-group>
             </div>
             <div class="tab-content-spacer" fxFlex></div>
@@ -60,8 +74,8 @@
                                  fxLayoutGap="10px" fxFlex
                                  fxFlex.xs="100"
                                  [formControl]="formControls.returningUser">
-                    <mat-radio-button class="tab-check-box" value="y" fxFlex="13" fxFlex.xs="25">Yes</mat-radio-button>
-                    <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25">No</mat-radio-button>
+                    <mat-radio-button class="tab-check-box" value="y" fxFlex="13" fxFlex.xs="25">{{'forms.options.yes' | translate}}</mat-radio-button>
+                    <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25">{{'forms.options.no' | translate}}</mat-radio-button>
                 </mat-radio-group>
             </div>
             <div class="tab-content-spacer" fxFlex></div>
