default language and some update

--- a/src/app/navbar/navbar.component.less
+++ b/src/app/navbar/navbar.component.less
@@ -13,6 +13,7 @@
   padding: 10px;
   user-select: none;
   width: 60px;
+  text-transform: uppercase;
 }
 .tab:hover {
   background-color: @color_lightest;
