--- a/src/app/annotate-v2/annotate-v2.component.html
+++ b/src/app/annotate-v2/annotate-v2.component.html
@@ -1,4 +1,3 @@
-
 <div class="component-container">
     <div id = "waves"></div>
     <div id = "spectrogram"></div>
@@ -28,6 +27,7 @@
                 <div class="button-container" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutAlign.xs="start start">
                     <div *ngIf="recordingAudioState == 0 || recordingAudioState == 1" class="button" (click)="recordingAudioState=2; startPlaying();">PLAY AUDIO</div>
                     <div *ngIf="recordingAudioState == 2" class="button button-dark" (click)="recordingAudioState=1; stopPlaying();">STOP PLAYING</div>
+                    <div *ngIf="recordingAudioState == 2" class="button button-dark" (click)="clearRegions();">CLEAR REGIONS</div>
                 </div>
                 <div *ngIf="recordingAudioState >= 0" class="button-container" fxLayout="row">
                     <div *ngIf="recordStages.indexOf(this.currentStage) > 0" class="button" (click)="previousRecording()">PREVIOUS</div>
