--- a/projects/collect/src/app/thanks/thanks.component.less
+++ b/projects/collect/src/app/thanks/thanks.component.less
@@ -1,5 +1,15 @@
 @import "../../styles";
 
+.user-id {
+  margin: 25px 15px;
+  width: 100%;
+}
+.user-id .box {
+  border: @border_line;
+  padding: 10px;
+  color: @color_dark;
+  font-weight: bold;
+}
 .feedback { width: 60%;}
 .warning-box {
   margin: 10px 0;
