--- a/projects/collect/src/app/record/record.component.html
+++ b/projects/collect/src/app/record/record.component.html
@@ -18,7 +18,8 @@
                     </div>
                 </div>
                 <div *ngIf="recordState == 5" class="upload" fxLayout="row wrap" fxLayoutAlign="start center">
-                    <mat-progress-spinner [diameter]="30" [value]="uploadProgress"></mat-progress-spinner>
+                    <mat-progress-spinner *ngIf="uploadProgress > 0" [diameter]="30" [value]="uploadProgress"></mat-progress-spinner>
+                    <mat-progress-spinner *ngIf="!uploadProgress"  [diameter]="30" mode="indeterminate"></mat-progress-spinner>
                     <div class="content">
                         {{'record.message.uploading' | translate}}
                     </div>
